--- a/client-app/app/chat/[name]/page.module.css
+++ b/client-app/app/chat/[name]/page.module.css
@@ -1,6 +1,6 @@
 .main_div {
-  height: 100vh;
-  widows: 100vw;
+  height: 100%;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
